<resources>
    <string name="app_name">Super-puper Chat (TBD)</string>

    <!--bottom navigation-->
    <string name="title_messenger">Messenger</string>
    <string name="title_X">X</string>
    <string name="title_profile">Profile</string>
    <string name="pushkin">Pushkin</string>
    <string name="bla_bla">bla-bla</string>
    <string name="_18_00">18:00</string>
    <string name="change_theme">Change theme</string>
    <string name="age" translatable="false">%d + "y.o."</string>
    <string name="about" translatable="false">"О себе: " + %d</string>
    <string name="email" translatable="false">"E-mail: " + %d</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_redaction_name_hint" >Edited name</string>
    <string name="profile_redaction_age_hint">Edited age</string>
    <string name="profile_redaction_status_hint">Edited status</string>
    <string name="profile_redaction_about_hint">"Edited information "</string>
    <string name="profile_redaction_email_hint">Edited email</string>
    <string name="profile_redaction_btn_edit_text">Edit</string>
    <string name="profile_redaction_title_text">Edit your profile</string>
    <string name="tv_write_new_name_text">Write new name</string>
    <string name="tv_write_age_title_text">"Write new age "</string>
    <string name="tv_write_status_text">Write new status</string>
    <string name="tv_write_about_text">Write new information</string>
    <string name="tv_wtite_email_text">Write new email</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="tv_error_text">You should edit all fields</string>
    <string name="Magic">Magic</string>

</resources>